--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,21 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar">
     <a class="navbar-brand" href="/">Note Taker
     </a>
   </nav>
-  <div class="container">
-    <div style="margin-top: 80px;" class="jumbotron text-center">
-      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
-      <h4 class="mt-4">Take notes with Express</h4>
-      <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
-    </div>
-  </div>
+  <main class="container">
+    <section class="jumbotron text-center face">
+      <h1 class="display-4">Welcome to Note Taker <span role="img" aria-label="Memo">📝</span></h1>
+      <h6 class="mt-4">Never lose your notes again!</h6>
+      <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Open</a>
+    </section>
+  </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/assets/js/index.js"></script>
 </body>
